--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,11 +1,16 @@
 @import "base/variables";
 
+// Font Awesome
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+
 // Foundation
 @import "base/foundation-settings";
 @import "foundation";
 @include foundation-everything;
 
 // Components
+@import "components/callout-auth";
 @import "components/container";
+@import "components/page-actions";
 @import "components/page-title";
 @import "components/todo";
