--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -3,3 +3,7 @@ $grey: #333;
 $light-grey: #FAFAFA;
 $light-grey-border: #EEE;
 $light-color: #AAA;
+
+// Brand Colours
+$sm-light-blue: #DAE5EF;
+$sm-blue: #5D99D2;
