--- a/app/styles/components/_callout-auth.scss
+++ b/app/styles/components/_callout-auth.scss
@@ -1,7 +1,7 @@
 .callout-auth {
   text-align: center;
-  background-color: $light-grey;
-  border: 1px solid $light-grey-border;
+  background-color: #FFF;
+  border: 1px solid $sm-blue;
   padding: 2rem;
 
   h3, p {
