--- a/app/styles/components/_container.scss
+++ b/app/styles/components/_container.scss
@@ -1,6 +1,6 @@
 .container {
   background: $light-grey;
-  border: 1px solid $light-grey-border;
+  border: 1px solid $sm-blue;
   border-radius: 5px;
   padding: 0;
   margin-bottom: 2rem;
