--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,7 @@
 // Components
 @import "components/callout-auth";
 @import "components/container";
+@import "components/main";
 @import "components/page-actions";
 @import "components/page-title";
 @import "components/todo";
