--- a/app/styles/components/_callout-auth.scss
+++ b/app/styles/components/_callout-auth.scss
@@ -15,4 +15,19 @@
   .button-facebook {
     background-color: #3b5998;
   }
+
+  &__or {
+    margin-bottom: 1rem;
+
+    span {
+      display: inline-block;
+      width: 3rem;
+      height: 3rem;
+      line-height: 3rem;
+      text-transform: uppercase;
+      font-size: .75rem;
+      border: 1px solid $sm-light-blue;
+      border-radius: 50%;
+    }
+  }
 }
